[package]
name = "nudge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nudge-test"
path = "src/main_test.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
which = "6.0"
directories = "5"
toml = "0.8"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
